# libgap

./: .gitignore  .hgignore  .travis.yml  AUTHORS  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h.in  configure  configure.ac
patches/: gap-4.5.7.patch  gap-4.6.2.patch  gap-4.6.3.patch  gap-4.6.4.patch  gap-4.6.5.patch  gap-4.7.2.patch  gap-4.7.4.patch  gap-4.7.5.1.patch  gap-4.7.5.patch  gap-4.7.7.patch  gap-4.7.8.patch  gap-4.7.9.patch  gap-4.8.1.patch  gap-4.8.3.patch
scripts/: generate_patch.sh  libGAPify.py  libGAPify_dummy.py
spkg/: SPKG.txt  libGAPify-sparc.patch  libGAPify.py  make-spkg.sh  spkg-install  test-mangling.sh  trac_6391_libGAP.patch
src/: Makefile.am  Makefile.am~  Makefile.in  blister.c  c_filt1.c  c_meths1.c  c_oper1.c  c_random.c  c_type1.c  calls.c  calls.h  code.c  code.h  compiler.c  config.h.in  costab.c  cyclotom.c  exprs.c  finfield.c  float.c  float.h  funcs.c  funcs.h  gap.c  gap.h  gap_version.h  gasman.c  gasman.h  gvars.c  integer.c  integer.h  intrprtr.c  intrprtr.h  iostream.c  libgap.c  libgap.h  libgap.map  libgap_internal.h  listfunc.c  lists.c  (+34 more)
test/: Makefile.am  Makefile.in  error_handler.c  libgap.supp  shell.c  test.c
